fix profile pic on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,17 +4,23 @@
 @import 'jekyll-theme-cayman';
 
 .img-container {
-  height: 300px;
+  width: 120px;
+  max-width: 40vw;
+  height: auto;
   overflow: hidden;
   border-radius: 5px;
   flex-shrink: 0;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-// .profile-pic {
-//   height: 100%;
-//   width: 100%;
-//   object-fit: cover;
-// }
+.profile-pic {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
 
 .page-header {
   display: flex;
@@ -22,19 +28,13 @@
   flex-direction: column;
 }
 
-.profile-pic {
-  width: 120px;
-  max-width: 40vw;
-  height: auto;
-  border-radius: 50%;
-  display: block;
-  margin: 0 auto;
-}
+
 
 
 @media (max-width: 600px) {
-  .profile-pic {
+  .img-container {
     width: 80px;
     max-width: 60vw;
+    height: auto;
   }
 }
